--- a/cs260/cs260.html
+++ b/cs260/cs260.html
@@ -5,7 +5,7 @@
         <title>CS260 Porfolio</title>
     </head>
     <body>
-        <a href="/cs260/book/exercises/chapter1.zip" target="_blank" download="chapter1">
+        <a href="/cs260/book/exercises/chapter 1/fractions.py" target="_blank" download="chapter1">
             Chapter 1 download
         </a>
     </body>
