--- a/cs260/cs260.html
+++ b/cs260/cs260.html
@@ -1,12 +1,76 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta charset ="UTF-8">
-        <title>CS260 Porfolio</title>
-    </head>
-    <body>
-        <a href="/cs260/book/exercises/chapter 1/fractions.py" target="_blank" download="chapter1">
-            Chapter 1 download
-        </a>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>CS260 Porfolio</title>
+</head>
+
+<body>
+    <div>
+        <h2> Chapter work</h2>
+        <ul>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%201">
+                    Chapter 1
+                </a>
+            </li>
+            <li> <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%203">
+                    Chapter 3
+                </a></li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%204">
+                    Chapter 4
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%205">
+                    Chapter 5
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%206">
+                    Chapter 6
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%207">
+                    Chapter 7
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/book/exercises/chapter%208">
+                    Chapter 8
+                </a>
+            </li>
+        </ul>
+    </div>
+    <div>
+        <h2>Assignments</h2>
+        <ul>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/maze">
+                    Maze
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/hashalg">
+                    Hashalg
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/heap">
+                    Heap
+                </a>
+            </li>
+            <li>
+                <a href="https://github.com/alarichartsock/csportfolio/tree/master/cs260/djikstra's">
+                    Djikstra's Algorithm
+                </a>
+            </li>
+        </ul>
+    </div>
+
+</body>
+
 </html>
