--- a/cs162/cs162.html
+++ b/cs162/cs162.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        
-    </head>
-    <body>
+
+<head>
+    <title>CS162</title>
+</head>
+
+<body>
+    <h1>CS162</h1>
+    <h2>Chapter work</h2>
     <ul>
-        <li><a href ="https://docs.google.com/document/d/1OXASZbiBGZtwxmhwQXG_yPksZflbDg5Xc_jPZltJOHQ/edit?usp=sharing">Chapter 5</a></li>
-        <li><a href ="https://docs.google.com/document/d/1U42fA-dfQP7nVmbgiciKQFzbNHuORPpFneHXhLdwT1w/edit?usp=sharing">Chapter 10</a></li>
-        <li><a href ="https://docs.google.com/document/d/1E-X18l7ieXpZ7eOIvZN4t70p1lLEuqrtP5ak69RE5mA/edit?usp=sharing">Chapter 11</a></li>
-        <li><a href ="https://docs.google.com/document/d/1-Qkwe5xTB9DKkxyHGvdKawRPm5Vak1lYD_GDIJNh65o/edit?usp=sharing">Chapter 12</a></li>
-        <li><a href ="https://docs.google.com/document/d/1TA1IZMtSGaxFXtG7QpMN9AhooDRkpwfRjli-o_9cYRo/edit?usp=sharing">Chapter 13</a></li>
-        <li><a href="https://docs.google.com/document/d/1NELXE1LbC85UGGBTSt7O1P8RHo0HWwHVrO9TBapLZ8g/edit?usp=sharing">Chapter 14</a></li>
+        <li><a href="https://docs.google.com/document/d/1OXASZbiBGZtwxmhwQXG_yPksZflbDg5Xc_jPZltJOHQ/edit?usp=sharing">Chapter
+                5</a></li>
+        <li><a href="https://docs.google.com/document/d/1U42fA-dfQP7nVmbgiciKQFzbNHuORPpFneHXhLdwT1w/edit?usp=sharing">Chapter
+                10</a></li>
+        <li><a href="https://docs.google.com/document/d/1E-X18l7ieXpZ7eOIvZN4t70p1lLEuqrtP5ak69RE5mA/edit?usp=sharing">Chapter
+                11</a></li>
+        <li><a href="https://docs.google.com/document/d/1-Qkwe5xTB9DKkxyHGvdKawRPm5Vak1lYD_GDIJNh65o/edit?usp=sharing">Chapter
+                12</a></li>
+        <li><a href="https://docs.google.com/document/d/1TA1IZMtSGaxFXtG7QpMN9AhooDRkpwfRjli-o_9cYRo/edit?usp=sharing">Chapter
+                13</a></li>
+        <li><a href="https://docs.google.com/document/d/1NELXE1LbC85UGGBTSt7O1P8RHo0HWwHVrO9TBapLZ8g/edit?usp=sharing">Chapter
+                14</a></li>
     </ul>
 </body>
+
 </html>
