--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <DOCTYPE html>
-<html>
+    <html>
+
     <head>
         <title>CS Portfolio</title>
     </head>
+
     <body>
-        <h1>My CS Portfolio 2018-2019</h1>
-        <a href="cs160/cs160.html">CS160</a>
-        <a href="cs161/cs161.html">CS161</a>
-        <a href="cs162/cs162.html">CS162</a>
-        <a href="cs260/cs260.html">CS260</a>
+        <h1>Alaric Hartsock CS Portfolio 2018-2019</h1>
+        <ol>
+            <li>
+                <a href="cs160/cs160.html">CS160</a>
+            </li>
+            <li>
+                <a href="cs161/cs161.html">CS161</a>
+            </li>
+            <li>
+                <a href="cs162/cs162.html">CS162</a>
+            </li>
+            <li>
+                <a href="cs260/cs260.html">CS260</a>
+            </li>
+        </ol>
     </body>
-</html>
+
+    </html>
