beautified the website
yeup

--- a/cs160/cs160.html
+++ b/cs160/cs160.html
@@ -15,7 +15,8 @@
                         Eval (C-)</a></li>
             </div>
             <div>
-                <li><a href="https://docs.google.com/document/d/1I18y4mF7ySRE9DYUuiqcGMxIy1HxzPJLF5JLOY1bDx0/edit?usp=sharing">Final
+                <li><a
+                        href="https://docs.google.com/document/d/1I18y4mF7ySRE9DYUuiqcGMxIy1HxzPJLF5JLOY1bDx0/edit?usp=sharing">Final
                         Eval (B)</a></li>
             </div>
 
@@ -50,17 +51,23 @@
 
             <p>Writings</p>
             <ul>
-                <li><a href="https://docs.google.com/document/d/1tUJ3ITR2P0yhD7suTvUdDhGc4BaZgYNyFAg22vsyPDo/edit?usp=sharing">College
+                <li><a
+                        href="https://docs.google.com/document/d/1tUJ3ITR2P0yhD7suTvUdDhGc4BaZgYNyFAg22vsyPDo/edit?usp=sharing">College
                         Degree Pathway Courses Page</a></li>
-                <li><a href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit?usp=sharing">Midterm
+                <li><a
+                        href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit?usp=sharing">Midterm
                         Rubric for grading</a></li>
-                <li><a href="https://docs.google.com/document/d/1IQ3UAu207I-u_W-ykTtYnBpkwXytaZ-tZl4dWldTWlI/edit?usp=sharing">DevOps
+                <li><a
+                        href="https://docs.google.com/document/d/1IQ3UAu207I-u_W-ykTtYnBpkwXytaZ-tZl4dWldTWlI/edit?usp=sharing">DevOps
                         Summary</a></li>
-                <li><a href="https://docs.google.com/document/d/1Q1dY6FOMiSS6-kKY4Blaju1D_Mh5OFCbtIUPo4kXLWg/edit?usp=sharing">Inevitable
+                <li><a
+                        href="https://docs.google.com/document/d/1Q1dY6FOMiSS6-kKY4Blaju1D_Mh5OFCbtIUPo4kXLWg/edit?usp=sharing">Inevitable
                         Pain of Software Summary</a></li>
-                <li><a href="https://docs.google.com/document/d/1ctmr7AGW12SWhFNQgjJtkGztYoBV5otr4WcEfj8TxHY/edit?usp=sharing">Big
+                <li><a
+                        href="https://docs.google.com/document/d/1ctmr7AGW12SWhFNQgjJtkGztYoBV5otr4WcEfj8TxHY/edit?usp=sharing">Big
                         ball of mud Summary</a></li>
-                <li><a href="https://docs.google.com/document/d/1LqVRhIN5Ibiuf44I7rTHHbTlPcNzy632e76eLfHJimk/edit?usp=sharing">Software
+                <li><a
+                        href="https://docs.google.com/document/d/1LqVRhIN5Ibiuf44I7rTHHbTlPcNzy632e76eLfHJimk/edit?usp=sharing">Software
                         Is Hard</a></li>
 
             </ul>
@@ -68,19 +75,23 @@
 
             <p>Readings</p>
             <ol>
-                <li><a href="https://docs.google.com/document/d/1yxEr_2HZmt6GqSRVGrJYZjG8oBKZuf9dFG1_t1EAXas/edit?usp=sharing">Dreaming
+                <li><a
+                        href="https://docs.google.com/document/d/1yxEr_2HZmt6GqSRVGrJYZjG8oBKZuf9dFG1_t1EAXas/edit?usp=sharing">Dreaming
                         in Code reading questions</a></li>
-                <li><a href="https://docs.google.com/document/d/19UA7bwAQNi6-AcqUlwPy-9PVe3BJpYt4gFjiSlZ4gSk/edit?usp=sharing">CODE
+                <li><a
+                        href="https://docs.google.com/document/d/19UA7bwAQNi6-AcqUlwPy-9PVe3BJpYt4gFjiSlZ4gSk/edit?usp=sharing">CODE
                         reading Questions</a></li>
             </ol>
 
 
 
-            <p><a href="https://docs.google.com/document/d/1U0KFd4hDvU8e4CsXv5F81BxmQJySo6yYwG7C7nyOcUA/edit?usp=sharing">Nand
+            <p><a
+                    href="https://docs.google.com/document/d/1U0KFd4hDvU8e4CsXv5F81BxmQJySo6yYwG7C7nyOcUA/edit?usp=sharing">Nand
                     to Tetris 16</a></p>
 
 
-            <p><a href="https://docs.google.com/document/d/1JYlCDzHQVR9teETMA2S0HxTnXYfsOZOra-E64LW-QDQ/edit?usp=sharing">Robot
+            <p><a
+                    href="https://docs.google.com/document/d/1JYlCDzHQVR9teETMA2S0HxTnXYfsOZOra-E64LW-QDQ/edit?usp=sharing">Robot
                     Treasure Hunt</a></p>
 
 
