--- a/index.html
+++ b/index.html
@@ -3,24 +3,41 @@
 
     <head>
         <title>CS Portfolio</title>
+        <link rel="stylesheet" href="style.css">
+
+
     </head>
 
     <body>
-        <h1>Alaric Hartsock CS Portfolio 2018-2019</h1>
-        <ol>
-            <li>
-                <a href="cs160/cs160.html">CS160</a>
-            </li>
-            <li>
-                <a href="cs161/cs161.html">CS161</a>
-            </li>
-            <li>
-                <a href="cs162/cs162.html">CS162</a>
-            </li>
-            <li>
-                <a href="cs260/cs260.html">CS260</a>
-            </li>
-        </ol>
+
+        <nav>
+            <p>Alaric Hartsock</p>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Classwork</a>
+                
+                    <ul>
+                        <li>
+                            <a href="cs160/cs160.html">CS160</a>
+                        </li>
+                        <li>
+                            <a href="cs161/cs161.html">CS161</a>
+                        </li>
+                        <li>
+                            <a href="cs162/cs162.html">CS162</a>
+                        </li>
+                        <li>
+                            <a href="cs260/cs260.html">CS260</a>
+                        </li>
+                    </ul>
+                </li>
+                <li><a href="#">Side Projects</a></li>
+                <li><a href="#">About me</a></li>
+                <li>
+
+                </li>
+            </ul>
+        </nav>
     </body>
 
     </html>
