--- a/cs260/cs260.html
+++ b/cs260/cs260.html
@@ -4,9 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <title>CS260 Porfolio</title>
+    <link rel="stylesheet" href="cs260.css">
 </head>
 
 <body>
+    <nav>
+        <p>Alaric Hartsock</p>
+        <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Classwork</a>
+
+                <ul>
+                    <li>
+                        <a href="cs160/cs160.html">CS160</a>
+                    </li>
+                    <li>
+                        <a href="cs161/cs161.html">CS161</a>
+                    </li>
+                    <li>
+                        <a href="cs162/cs162.html">CS162</a>
+                    </li>
+                    <li>
+                        <a href="cs260.html">CS260</a>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#">Side Projects</a></li>
+            <li><a href="#">About me</a></li>
+        </ul>
+    </nav>
+    <div class="Center-Container">
     <h1>CS260</h1>
     <div>
         <h2> Chapter work</h2>
@@ -70,6 +97,7 @@
                 </a>
             </li>
         </ul>
+    </div>
     </div>
 
 </body>
