--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <nav>
             <p>Alaric Hartsock</p>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Classwork</a>
-                
+
                     <ul>
                         <li>
                             <a href="cs160/cs160.html">CS160</a>
@@ -33,9 +33,6 @@
                 </li>
                 <li><a href="#">Side Projects</a></li>
                 <li><a href="#">About me</a></li>
-                <li>
-
-                </li>
             </ul>
         </nav>
     </body>
