updated cs160, cs161, cs162, cs260

--- a/cs162/cs162.html
+++ b/cs162/cs162.html
@@ -3,26 +3,54 @@
 <html>
 
 <head>
-    <title>CS162</title>
+        <meta charset="UTF-8">
+        <title>CS162</title>
+        <link rel="stylesheet" href="cs162.css">
 </head>
 
 <body>
-    <h1>CS162</h1>
-    <h2>Chapter work</h2>
-    <ul>
-        <li><a href="https://docs.google.com/document/d/1OXASZbiBGZtwxmhwQXG_yPksZflbDg5Xc_jPZltJOHQ/edit?usp=sharing">Chapter
-                5</a></li>
-        <li><a href="https://docs.google.com/document/d/1U42fA-dfQP7nVmbgiciKQFzbNHuORPpFneHXhLdwT1w/edit?usp=sharing">Chapter
-                10</a></li>
-        <li><a href="https://docs.google.com/document/d/1E-X18l7ieXpZ7eOIvZN4t70p1lLEuqrtP5ak69RE5mA/edit?usp=sharing">Chapter
-                11</a></li>
-        <li><a href="https://docs.google.com/document/d/1-Qkwe5xTB9DKkxyHGvdKawRPm5Vak1lYD_GDIJNh65o/edit?usp=sharing">Chapter
-                12</a></li>
-        <li><a href="https://docs.google.com/document/d/1TA1IZMtSGaxFXtG7QpMN9AhooDRkpwfRjli-o_9cYRo/edit?usp=sharing">Chapter
-                13</a></li>
-        <li><a href="https://docs.google.com/document/d/1NELXE1LbC85UGGBTSt7O1P8RHo0HWwHVrO9TBapLZ8g/edit?usp=sharing">Chapter
-                14</a></li>
-    </ul>
+        <nav>
+                <p>Alaric Hartsock</p>
+                <ul>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="#">Classwork</a>
+                                <ul>
+                                        <li>
+                                                <a href="../cs160/cs160.html">CS160</a>
+                                        </li>
+                                        <li>
+                                                <a href="../cs161/cs161.html">CS161</a>
+                                        </li>
+                                        <li>
+                                                <a href="cs162.html">CS162</a>
+                                        </li>
+                                        <li>
+                                                <a href="../cs260/cs260.html">CS260</a>
+                                        </li>
+                                </ul>
+                        </li>
+                        <li><a href="#">Side Projects</a></li>
+                        <li><a href="#">About me</a></li>
+                </ul>
+        </nav>
+        <div class="Center-Container">
+                <h1>CS162</h1>
+                <h2>Chapter work</h2>
+                <ul>
+                        <li><a href="https://docs.google.com/document/d/1OXASZbiBGZtwxmhwQXG_yPksZflbDg5Xc_jPZltJOHQ/edit?usp=sharing">Chapter
+                                        5</a></li>
+                        <li><a href="https://docs.google.com/document/d/1U42fA-dfQP7nVmbgiciKQFzbNHuORPpFneHXhLdwT1w/edit?usp=sharing">Chapter
+                                        10</a></li>
+                        <li><a href="https://docs.google.com/document/d/1E-X18l7ieXpZ7eOIvZN4t70p1lLEuqrtP5ak69RE5mA/edit?usp=sharing">Chapter
+                                        11</a></li>
+                        <li><a href="https://docs.google.com/document/d/1-Qkwe5xTB9DKkxyHGvdKawRPm5Vak1lYD_GDIJNh65o/edit?usp=sharing">Chapter
+                                        12</a></li>
+                        <li><a href="https://docs.google.com/document/d/1TA1IZMtSGaxFXtG7QpMN9AhooDRkpwfRjli-o_9cYRo/edit?usp=sharing">Chapter
+                                        13</a></li>
+                        <li><a href="https://docs.google.com/document/d/1NELXE1LbC85UGGBTSt7O1P8RHo0HWwHVrO9TBapLZ8g/edit?usp=sharing">Chapter
+                                        14</a></li>
+                </ul>
+        </div>
 </body>
 
 </html>
