--- a/cs260/cs260.html
+++ b/cs260/cs260.html
@@ -16,13 +16,13 @@
 
                 <ul>
                     <li>
-                        <a href="cs160/cs160.html">CS160</a>
+                        <a href="../cs160/cs160.html">CS160</a>
                     </li>
                     <li>
-                        <a href="cs161/cs161.html">CS161</a>
+                        <a href="../cs161/cs161.html">CS161</a>
                     </li>
                     <li>
-                        <a href="cs162/cs162.html">CS162</a>
+                        <a href="../cs162/cs162.html">CS162</a>
                     </li>
                     <li>
                         <a href="cs260.html">CS260</a>
