--- a/cs160/cs160.html
+++ b/cs160/cs160.html
@@ -4,34 +4,59 @@
 
     <head>
         <title>CS160</title>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="cs160.css">
     </head>
 
     <body>
-        <h1>My CS160 Portfolio.</h1>
-        <ul>
-
-            <div>
-                <li><a href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit">Midterm
-                        Eval (C-)</a></li>
-            </div>
-            <div>
-                <li><a
-                        href="https://docs.google.com/document/d/1I18y4mF7ySRE9DYUuiqcGMxIy1HxzPJLF5JLOY1bDx0/edit?usp=sharing">Final
-                        Eval (B)</a></li>
-            </div>
-
-            <p>Software Projects</p>
+        <nav>
+            <p>Alaric Hartsock</p>
             <ul>
-                <li><a href="projects/frictionmarble.html">Scratch Practice</a></li>
-                <li><a href="projects/scratchgame.html">Scratch Game</a></li>
-                <li>
-                    <p>Second Scratch Game[incomplete]</p>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="#">Classwork</a>
+                    <ul>
+                        <li>
+                            <a href="cs160.html">CS160</a>
+                        </li>
+                        <li>
+                            <a href="../cs161/cs161.html">CS161</a>
+                        </li>
+                        <li>
+                            <a href="../cs162/cs162.html">CS162</a>
+                        </li>
+                        <li>
+                            <a href="../cs260/cs260.html">CS260</a>
+                        </li>
+                    </ul>
                 </li>
-                <li><a href="https://www.youtube.com/watch?v=Xm1vUvcTo3I">App made using Flutter</a></li>
-                <li><a href="https://repl.it/@alarichartsock/rockpaperscissors">Rock Paper Scissors</a></li>
-                <li><a href="https://repl.it/@alarichartsock/mastermind1">Mastermind Python project</a></li>
+                <li><a href="#">Side Projects</a></li>
+                <li><a href="#">About me</a></li>
+            </ul>
+        </nav>
+        <div class="Center-Container">
+            <h1>CS160</h1>
+            <ul>
+
+                <div>
+                    <li><a href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit">Midterm
+                            Eval</a></li>
+                </div>
+                <div>
+                    <li><a
+                            href="https://docs.google.com/document/d/1I18y4mF7ySRE9DYUuiqcGMxIy1HxzPJLF5JLOY1bDx0/edit?usp=sharing">Final
+                            Eval</a></li>
+                </div>
+
+                <h2>Software Projects</h2>
                 <ul>
-                    <p> JS processing</p>
+                    <li><a href="projects/frictionmarble.html">Scratch Practice</a></li>
+                    <li><a href="projects/scratchgame.html">Scratch Game</a></li>
+                    <li><a href="https://www.youtube.com/watch?v=Xm1vUvcTo3I">App made using Flutter</a></li>
+                    <li><a href="https://repl.it/@alarichartsock/rockpaperscissors">Rock Paper Scissors</a></li>
+                    <li><a href="https://repl.it/@alarichartsock/mastermind1">Mastermind Python project</a></li>
+                </ul>
+                <h2> JS processing</h2>
+                <ul>
                     <li>
                         <a href="https://editor.p5js.org/alarichartsock/full/rkRZSNikE">Basic Processing</a>
                     </li>
@@ -40,16 +65,16 @@
                     </li>
                     <li>
                         <a href="https://editor.p5js.org/alarichartsock/full/rkYwGv21N">Artistic Processing</a>
-                        <p>Windows 98 error with an epileptic twist. (Hold down mousebutton)</p>
                     </li>
                 </ul>
                 <li><a href="https://repl.it/@alarichartsock/Base-to-decimal">Python Base Converter Program</a></li>
-                <li><a href="https://repl.it/@alarichartsock/hangman?language=python">Python Hangman Program</a></li>
+                <li><a href="https://repl.it/@alarichartsock/hangman?language=python">Python Hangman Program</a>
+                </li>
             </ul>
 
 
 
-            <p>Writings</p>
+            <h2>Writings</h2>
             <ul>
                 <li><a
                         href="https://docs.google.com/document/d/1tUJ3ITR2P0yhD7suTvUdDhGc4BaZgYNyFAg22vsyPDo/edit?usp=sharing">College
@@ -73,29 +98,25 @@
             </ul>
 
 
-            <p>Readings</p>
-            <ol>
+            <h2>Readings</h2>
+            <ul>
                 <li><a
                         href="https://docs.google.com/document/d/1yxEr_2HZmt6GqSRVGrJYZjG8oBKZuf9dFG1_t1EAXas/edit?usp=sharing">Dreaming
                         in Code reading questions</a></li>
                 <li><a
                         href="https://docs.google.com/document/d/19UA7bwAQNi6-AcqUlwPy-9PVe3BJpYt4gFjiSlZ4gSk/edit?usp=sharing">CODE
                         reading Questions</a></li>
-            </ol>
+                <li><a
+                        href="https://docs.google.com/document/d/1U0KFd4hDvU8e4CsXv5F81BxmQJySo6yYwG7C7nyOcUA/edit?usp=sharing">Nand
+                        to Tetris 16</a></li>
 
 
+                <li><a
+                        href="https://docs.google.com/document/d/1JYlCDzHQVR9teETMA2S0HxTnXYfsOZOra-E64LW-QDQ/edit?usp=sharing">Robot
+                        Treasure Hunt</a></li>
+            </ul>
 
-            <p><a
-                    href="https://docs.google.com/document/d/1U0KFd4hDvU8e4CsXv5F81BxmQJySo6yYwG7C7nyOcUA/edit?usp=sharing">Nand
-                    to Tetris 16</a></p>
-
-
-            <p><a
-                    href="https://docs.google.com/document/d/1JYlCDzHQVR9teETMA2S0HxTnXYfsOZOra-E64LW-QDQ/edit?usp=sharing">Robot
-                    Treasure Hunt</a></p>
-
-
-            <p>Logisim Circuits</p>
+            <h2>Logisim Circuits</h2>
             <ul>
                 <li><a href="https://www.screencast.com/t/HL59ifckTDp">Half Adder</a></li>
                 <li><a href="https://www.screencast.com/t/IM4iUwQ3">Full Adder</a></li>
@@ -106,12 +127,10 @@
                     <li><a href="https://www.screencast.com/t/jJureXrQA9">Inverter Used in 8 Bit Adder with
                             Subtraction. The Microcircuits on the right were Full adders.</a></li>
                 </ul>
-                <p>NOTE: The error in the video for the 8 bit adder w/ Subtraction I think is because my circuit is
-                    close together, not because I messed it up. Well, I might've. But I understand how eveything
-                    works. Haha</p>
                 <li><a href="https://www.screencast.com/t/3aGfIYJf">Adding Machine</a>
+                    <h2>Subcomponents in Adding Machine</h2>
                     <ul>
-                        <p>Subcomponents in Adding Machine</p>
+
                         <li><a href="https://www.screencast.com/t/BD4uQajkxn6">8 Bit Latch</a></li>
                         <li><a href="https://www.screencast.com/t/l5nV8b3feepG">8 Bit Selector</a></li>
 
@@ -122,11 +141,12 @@
             </ul>
 
 
-            <p>Online Classes</p>
+            <h2>Online Classes</h2>
             <ol>
                 <li><a href="https://codehs.com/user/873332/4114">CodeHS</a></li>
             </ol>
-        </ul>
+            </ul>
+        </div>
     </body>
 
     </html>
