cleaned up cs160

--- a/cs160/cs160.html
+++ b/cs160/cs160.html
@@ -35,7 +35,7 @@
         </nav>
         <div class="Center-Container">
             <h1>CS160</h1>
-            <ul>
+            
 
                 <div>
                     <li><a href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit">Midterm
@@ -54,6 +54,8 @@
                     <li><a href="https://www.youtube.com/watch?v=Xm1vUvcTo3I">App made using Flutter</a></li>
                     <li><a href="https://repl.it/@alarichartsock/rockpaperscissors">Rock Paper Scissors</a></li>
                     <li><a href="https://repl.it/@alarichartsock/mastermind1">Mastermind Python project</a></li>
+                    <li><a href="https://repl.it/@alarichartsock/Base-to-decimal">Python Base Converter Program</a></li>
+                    <li><a href="https://repl.it/@alarichartsock/hangman?language=python">Python Hangman Program</a></li>
                 </ul>
                 <h2> JS processing</h2>
                 <ul>
@@ -67,9 +69,6 @@
                         <a href="https://editor.p5js.org/alarichartsock/full/rkYwGv21N">Artistic Processing</a>
                     </li>
                 </ul>
-                <li><a href="https://repl.it/@alarichartsock/Base-to-decimal">Python Base Converter Program</a></li>
-                <li><a href="https://repl.it/@alarichartsock/hangman?language=python">Python Hangman Program</a>
-                </li>
             </ul>
 
 
