--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>CS Portfolio</title>
-        <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="aboutme.css">
 
 
     </head>
@@ -13,7 +13,7 @@
         <nav>
             <p>Alaric Hartsock</p>
             <ul>
-                <li><a href="/index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Classwork</a>
 
                     <ul>
@@ -32,10 +32,13 @@
                     </ul>
                 </li>
                 <li><a href="#">Side Projects</a></li>
-                <li><a href="aboutme.html">About me</a></li>
+                <li><a href="#">About me</a></li>
             </ul>
         </nav>
+        <div class="Center-Container">
+            <h1>CS260</h1>
 
+            </div>
     </body>
 
     </html>
