--- a/cs260/cs260.html
+++ b/cs260/cs260.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>CS260 Porfolio</title>
+    <title>CS260</title>
     <link rel="stylesheet" href="cs260.css">
 </head>
 
