Refactored CS160 away from Google docs. Refactored code

--- a/cs160/cs160.html
+++ b/cs160/cs160.html
@@ -1,7 +1,5 @@
 <DOCTYPE html>
-
     <html>
-
     <head>
         <title>CS160</title>
         <meta charset="UTF-8">
@@ -15,18 +13,10 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Classwork</a>
                     <ul>
-                        <li>
-                            <a href="cs160.html">CS160</a>
-                        </li>
-                        <li>
-                            <a href="../cs161/cs161.html">CS161</a>
-                        </li>
-                        <li>
-                            <a href="../cs162/cs162.html">CS162</a>
-                        </li>
-                        <li>
-                            <a href="../cs260/cs260.html">CS260</a>
-                        </li>
+                        <li><a href="cs160.html">CS160</a></li>
+                        <li><a href="../cs161/cs161.html">CS161</a></li>
+                        <li><a href="../cs162/cs162.html">CS162</a></li>
+                        <li><a href="../cs260/cs260.html">CS260</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Side Projects</a></li>
@@ -35,23 +25,10 @@
         </nav>
         <div class="Center-Container">
             <h1>CS160</h1>
-            
-
-                <div>
-                    <li><a href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit">Midterm
-                            Eval</a></li>
-                </div>
-                <div>
-                    <li><a
-                            href="https://docs.google.com/document/d/1I18y4mF7ySRE9DYUuiqcGMxIy1HxzPJLF5JLOY1bDx0/edit?usp=sharing">Final
-                            Eval</a></li>
-                </div>
-
                 <h2>Software Projects</h2>
                 <ul>
-                    <li><a href="projects/frictionmarble.html">Scratch Practice</a></li>
-                    <li><a href="projects/scratchgame.html">Scratch Game</a></li>
-                    <li><a href="https://www.youtube.com/watch?v=Xm1vUvcTo3I">App made using Flutter</a></li>
+                    <li><a href="./projects/scratchgame.html">Scratch Game</a></li>
+                    <li><a href="https://github.com/alarichartsock/smartmoney">App made using Flutter</a></li>
                     <li><a href="https://repl.it/@alarichartsock/rockpaperscissors">Rock Paper Scissors</a></li>
                     <li><a href="https://repl.it/@alarichartsock/mastermind1">Mastermind Python project</a></li>
                     <li><a href="https://repl.it/@alarichartsock/Base-to-decimal">Python Base Converter Program</a></li>
@@ -59,91 +36,41 @@
                 </ul>
                 <h2> JS processing</h2>
                 <ul>
-                    <li>
-                        <a href="https://editor.p5js.org/alarichartsock/full/rkRZSNikE">Basic Processing</a>
-                    </li>
-                    <li>
-                        <a href="https://editor.p5js.org/alarichartsock/full/ryZPQ4s1N">Interactive Processing</a>
-                    </li>
-                    <li>
-                        <a href="https://editor.p5js.org/alarichartsock/full/rkYwGv21N">Artistic Processing</a>
-                    </li>
+                    <li><a href="https://editor.p5js.org/alarichartsock/full/rkRZSNikE">Basic Processing</a></li>
+                    <li><a href="https://editor.p5js.org/alarichartsock/full/ryZPQ4s1N">Interactive Processing</a></li>
+                    <li><a href="https://editor.p5js.org/alarichartsock/full/rkYwGv21N">Artistic Processing</a></li>
                 </ul>
-            </ul>
-
-
-
-            <h2>Writings</h2>
-            <ul>
-                <li><a
-                        href="https://docs.google.com/document/d/1tUJ3ITR2P0yhD7suTvUdDhGc4BaZgYNyFAg22vsyPDo/edit?usp=sharing">College
-                        Degree Pathway Courses Page</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1nLM3JzCC1KO6ECWZNQSfHviORsf979PMr8EvL2CDiTU/edit?usp=sharing">Midterm
-                        Rubric for grading</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1IQ3UAu207I-u_W-ykTtYnBpkwXytaZ-tZl4dWldTWlI/edit?usp=sharing">DevOps
-                        Summary</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1Q1dY6FOMiSS6-kKY4Blaju1D_Mh5OFCbtIUPo4kXLWg/edit?usp=sharing">Inevitable
-                        Pain of Software Summary</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1ctmr7AGW12SWhFNQgjJtkGztYoBV5otr4WcEfj8TxHY/edit?usp=sharing">Big
-                        ball of mud Summary</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1LqVRhIN5Ibiuf44I7rTHHbTlPcNzy632e76eLfHJimk/edit?usp=sharing">Software
-                        Is Hard</a></li>
-
-            </ul>
-
-
-            <h2>Readings</h2>
-            <ul>
-                <li><a
-                        href="https://docs.google.com/document/d/1yxEr_2HZmt6GqSRVGrJYZjG8oBKZuf9dFG1_t1EAXas/edit?usp=sharing">Dreaming
-                        in Code reading questions</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/19UA7bwAQNi6-AcqUlwPy-9PVe3BJpYt4gFjiSlZ4gSk/edit?usp=sharing">CODE
-                        reading Questions</a></li>
-                <li><a
-                        href="https://docs.google.com/document/d/1U0KFd4hDvU8e4CsXv5F81BxmQJySo6yYwG7C7nyOcUA/edit?usp=sharing">Nand
-                        to Tetris 16</a></li>
-
-
-                <li><a
-                        href="https://docs.google.com/document/d/1JYlCDzHQVR9teETMA2S0HxTnXYfsOZOra-E64LW-QDQ/edit?usp=sharing">Robot
-                        Treasure Hunt</a></li>
-            </ul>
-
-            <h2>Logisim Circuits</h2>
-            <ul>
-                <li><a href="https://www.screencast.com/t/HL59ifckTDp">Half Adder</a></li>
-                <li><a href="https://www.screencast.com/t/IM4iUwQ3">Full Adder</a></li>
-                <li><a href="https://www.screencast.com/t/g55XJJgHJ">4 Bit Adder</a></li>
-                <li><a href="https://www.screencast.com/t/WpQLJxwnIh8">8 Bit Adder</a></li>
-                <li><a href="https://www.screencast.com/t/RW5u5Edy1">8 Bit Adder with Subtraction</a></li>
+                <h2>Writings</h2>
                 <ul>
-                    <li><a href="https://www.screencast.com/t/jJureXrQA9">Inverter Used in 8 Bit Adder with
-                            Subtraction. The Microcircuits on the right were Full adders.</a></li>
+                    <li><a href="./writings/devopssummary.html">DevOps Summary</a></li>
+                    <li><a href="./writings/painofsoftware.html">Inevitable Pain of Software Summary</a></li>
+                    <li><a href="./writings/bigballofmud.html">Big ball of mud Summary</a></li>
+                    <li><a href="./writings/softwareishard.html">Software Is Hard</a></li>
                 </ul>
+                <h2>Readings</h2>
+                <ul>
+                    <li><a href="./readings/dreamingincode.html">Dreaming in Code reading questions</a></li>
+                    <li><a href="./readings/code.html">CODE reading Questions</a></li>
+                </ul>
+                <h2>Logisim Circuits</h2>
+                <ul>
+                    <li><a href="https://www.screencast.com/t/HL59ifckTDp">Half Adder</a></li>
+                    <li><a href="https://www.screencast.com/t/IM4iUwQ3">Full Adder</a></li>
+                    <li><a href="https://www.screencast.com/t/g55XJJgHJ">4 Bit Adder</a></li>
+                    <li><a href="https://www.screencast.com/t/WpQLJxwnIh8">8 Bit Adder</a></li>
+                    <li><a href="https://www.screencast.com/t/RW5u5Edy1">8 Bit Adder with Subtraction</a></li>
+                    <ul>
+                        <li><a href="https://www.screencast.com/t/jJureXrQA9">Inverter Used in 8 Bit Adder with subtraction. The Microcircuits on the right were Full adders.</a></li>
+                    </ul>
                 <li><a href="https://www.screencast.com/t/3aGfIYJf">Adding Machine</a>
                     <h2>Subcomponents in Adding Machine</h2>
                     <ul>
-
                         <li><a href="https://www.screencast.com/t/BD4uQajkxn6">8 Bit Latch</a></li>
                         <li><a href="https://www.screencast.com/t/l5nV8b3feepG">8 Bit Selector</a></li>
-
                     </ul>
                 <li><a href="https://www.screencast.com/t/9shQvXIqBVIj">Edge Triggered D-Flip-Flop</a></li>
-                <li><a href="https://www.screencast.com/t/YGQOphx7mjn">Ripple Counter. The Microcircuits are
-                        Logisim's D flip flops.</a></li>
-            </ul>
-
-
-            <h2>Online Classes</h2>
-            <ol>
-                <li><a href="https://codehs.com/user/873332/4114">CodeHS</a></li>
-            </ol>
+                <li><a href="https://www.screencast.com/t/YGQOphx7mjn">Ripple Counter. The Microcircuits are Logisim's D flip flops.</a></li>
+                </ul>
             </ul>
         </div>
     </body>
