Changed to white theme. Added mobile friendliness
I think it looks pretty good

--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CS Portfolio</title>
+        <title>Alaric Hartsock Portfolio</title>
         <link rel="stylesheet" href="portfolio.css">
 
         <!--Roboto font CSS -->
@@ -37,6 +37,56 @@
                 </li>
             </ul>
         </nav>
+
+        <div class="expand">
+            <div class="d-flex flex-column">
+                <div class="content">
+                    <h1 class="text" data-text="Portfolio">Portfolio</h1>
+                </div>
+                    <div class="content2">
+                        <h4 id="before">Home /</h4>
+                        <h4 id="typing"></h4>
+                        <h4 id="afterquote"> </h4>
+                    </div>
+            </div>
+        </div>
+
+        <script>
+            let count = 0;
+            let index = 0;
+            let letter = '';
+            let direction = true;
+
+            var text = [
+              "Portfolio",
+            ];
+
+            function type() {
+
+              setTimeout(type, 60);
+            	if(count === 0) {
+              	direction = true;
+              }
+                if(letter.length >= text[index].length) {
+                direction = false;
+              }
+              if(index == text.length-1) {
+                index = 0;
+              }
+              currentText = text[index];
+          
+              if(direction) {
+              	letter = currentText.slice(0,count++);
+                document.querySelector('#typing').textContent = letter;
+              } else { }
+          
+              if(count === 0) {
+                index++;
+              }
+            }
+
+            type();
+        </script>
 
         <!--Bootstrap JS-->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
