--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CS Portfolio</title>
+        <title>Alaric Hartsock</title>
         <link rel="stylesheet" href="index.css">
 
         <!--Roboto font CSS -->
@@ -44,7 +44,7 @@
               Alaric Hartsock</h1>
               </div>
                 <div class="content2">
-                    <h4 id=""></h4>
+                    <h4 id="before"></h4>
                     <h4 id="typing"></h4>
                     <h4 id="afterquote"> </h4>
                 </div>
@@ -64,10 +64,8 @@
 
         <!-- Custom JS -->
         <script src="./js/app.js"></script>
-
         <script>
             type();
-            // typeWriter();
         </script>
 
 
