--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>CS Portfolio</title>
+        <title>Contact Alaric Hartsock</title>
         <link rel="stylesheet" href="contact.css">
 
         <!--Roboto font CSS -->
