Addd mobile compatible nav bar

--- a/index.html
+++ b/index.html
@@ -20,22 +20,32 @@
     </head>
 
     <body style="background-color: #2e3440;">
-        <!-- Top hand navbar -->
-        <nav class="navbar navbar-expand-sm">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/resume/resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/portfolio/portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./pages/contact/contact.html">Contact</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a href="" class="navbar-brand">
+                Alaric Hartsock
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class=" collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto"></ul>
+                    <li class="nav-item"> 
+                        <a class="nav-link" href="./index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/resume/resume.html">Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/portfolio/portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./pages/contact/contact.html">Contact</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
         <div class="expand">
             <div class="d-flex flex-column">
