--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -20,22 +20,32 @@
     </head>
 
     <body style="background-color: #2e3440;">
-        <!-- Top hand navbar -->
-        <nav class="navbar navbar-expand-sm">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="../../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../resume/resume.html">Resume</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="../contact/contact.html">Contact</a>
-                </li>
-            </ul>
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a href="../../index.html" class="navbar-brand">
+                Alaric Hartsock
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+    
+            <div class=" collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ml-auto">
+                    <ul class="navbar-nav ml-auto"></ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../../index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../resume/resume.html">Resume</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../portfolio/portfolio.html">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../contact/contact.html">Contact</a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
 
         <div class="expand">
@@ -49,6 +59,75 @@
                         <h4 id="afterquote"> </h4>
                     </div>
             </div>
+        </div>
+        
+        <div class="resume">
+            <div class="aboutme">
+                <h5><strong>About me</strong></h5><br>
+                <h6>Hello! I'm Alaric. I'm a computer science student studying at Oregon State University interested in
+                    software development and computer security.</h6>
+                <ul class="aboutme-list">
+                    <li><strong>Age:</strong> 20</li>
+                    <li><strong>Residence:</strong> Oregon USA</li>
+                    <li><strong>Freelance:</strong> Available</li>
+                    <li><strong>Email:</strong> <a href="mailto:alaric.hartsock@yahoo.com?subject=consultation">Business
+                            email</a></li>
+                </ul>
+            </div>
+            <h6><a href="../../assets/documents/Resume.pdf" download>Download text resume</a></h6>
+            <div class="services">
+                <h5>Services</h5>
+                <ul class="services-list">
+                    <li>
+                        <strong>Web development</strong><br>
+                        <p>Modern and mobile-ready website that will help you reach all of your marketing.</p>
+                    </li>
+                    <li>
+                        <strong>Computer security</strong><br>
+                        <p>Penetration testing and network hardening to keep your infastructure safe.</p>
+                    </li>
+                    <li>
+                        <strong>Software development</strong><br>
+                        <p>Software development from simple C programs to enterprise level object oriented languages</p>
+                    </li>
+                    <li>
+                        <strong>App development</strong><br>
+                        <p>Native app cross platform app development using Flutter is available</p>
+                    </li>
+                </ul>
+                <div class="service">
+                </div>
+            </div>
+
+            <div class="skills">
+                <h5>Skills</h5>
+                <ul class="skills-list">
+                    <li>
+                        <strong>GNU/Linux</strong><br>
+                        <p>Familiar with GNU/Linux and Unix type operating systems, package managers, and commands.</p>
+                    </li>
+                    <li>
+                        <strong>Computer security</strong><br>
+                        <p>Experienced with penetration testing and network hardening</p>
+                    </li>
+                    <li>
+                        <strong>Software development</strong><br>
+                        <p>Proficient with Python, Dart, Javascript, C, and Java.</p>
+                    </li>
+                    <li>
+                        <strong>Flutter</strong><br>
+                        <p>Familiar and comfortable with Flutter, a native cross platform app development framework</p>
+                    </li>
+                    <li>
+                        <strong>Web maintenance</strong><br>
+                        <p>Comfortable with DNS, hosting providers, HTTPS, and most other topics related to website
+                            upkeep.</p>
+                    </li>
+                </ul>
+                <div class="service">
+                </div>
+            </div>
+
         </div>
 
         <script>
