--- a/pages/portfolio/portfolio.html
+++ b/pages/portfolio/portfolio.html
@@ -61,71 +61,57 @@
             </div>
         </div>
         
-        <div class="resume">
+        <div class="portfolio">
             <div class="aboutme">
-                <h5><strong>About me</strong></h5><br>
-                <h6>Hello! I'm Alaric. I'm a computer science student studying at Oregon State University interested in
-                    software development and computer security.</h6>
-                <ul class="aboutme-list">
-                    <li><strong>Age:</strong> 20</li>
-                    <li><strong>Residence:</strong> Oregon USA</li>
-                    <li><strong>Freelance:</strong> Available</li>
-                    <li><strong>Email:</strong> <a href="mailto:alaric.hartsock@yahoo.com?subject=consultation">Business
-                            email</a></li>
-                </ul>
+                <h5><strong>Portfolio</strong></h5><br>
+                <h6>Here's a collection of projects & clients that I've worked on/for either fully or partially. Inquire for more information at <a href="mailto:alaric.hartsock@yahoo.com?subject=consultation">alaric.hartsock@yahoo.com</a>. Not all clients are listed due to non disclosure agreements. </h6>
             </div>
-            <h6><a href="../../assets/documents/Resume.pdf" download>Download text resume</a></h6>
-            <div class="services">
-                <h5>Services</h5>
-                <ul class="services-list">
+            <div class="websites">
+                <h5>Websites</h5>
+                <ul class="websites-list">
+                    <!-- todo: get permission and add a small image with the side in it above the text -->
                     <li>
-                        <strong>Web development</strong><br>
-                        <p>Modern and mobile-ready website that will help you reach all of your marketing.</p>
+                        <p>Created website layout, pages</p>
+                        <strong><a href="https://clearmourning.org/">Clear Mourning</a></strong><br>
                     </li>
                     <li>
-                        <strong>Computer security</strong><br>
-                        <p>Penetration testing and network hardening to keep your infastructure safe.</p>
+                        <p>Created the whole website</p>
+                        <strong>Brand Defense</strong><br>
                     </li>
                     <li>
-                        <strong>Software development</strong><br>
-                        <p>Software development from simple C programs to enterprise level object oriented languages</p>
+                        <p>Restyled a series of pages</p>
+                        <strong><a href="https://tix6.centerstageticketing.com/sites/lakewoodtheatre/">Lakewood Theatre</a></strong><br>
                     </li>
                     <li>
-                        <strong>App development</strong><br>
-                        <p>Native app cross platform app development using Flutter is available</p>
+                        <p>Created multiple pages & components</p>
+                        <strong><a href="https://novunex.b2clogin.com/novunex.onmicrosoft.com/b2c_1_signinorup/oauth2/v2.0/authorize?client_id=7aed69dd-4d49-4bac-97d2-1986ce6f16f1&redirect_uri=https%3A%2F%2Foauth.wa.novunex.app%2Fsignin-oidc-azure-adb2c&response_type=id_token&scope=openid%20profile&response_mode=form_post&nonce=637364151745023007.NjZhOTIyZTAtNjgxNC00YzZiLTg4YjctNmY2OTczYjAyNTZiODRkZmY5YzQtMzhhOS00ZGFlLWI3MmEtYTNjYWY5ZjNmOWUw&state=CfDJ8HbktHT2Rd5Pt3-ByR30sba5oKQnGasH4707DEHsf8K8xKLkO0CQTe-Zlo5WGQRSAdx2R-Q3SKaN_RQqs0ZBtNSpe_qxhOc8G2Xnup5_UaOsWdTi7_AJ7w5gqYANulOy7uwaQ89O5qoXoitdkmWWmr9x4JCOJHYr3xIaX1ALng7FPm2MMZOSvbvbOCLab3BQdMnRPrfhgRSkgdt4aCe7agfCYa0IJFflcaDCk-hte_I3xJG_Ejg-Xp0G2tpGAOJDqUr2SgTEXvfRawC-LSZleyUwSxog-zc6hxytJUEOhjDXxXLKo31_Z8aMAoGKYfpRnvQPaC2tg0_xZmKlZhbHpSqoj0Qh4sa6h3vXyLFYwSQ-Al8cmg9q1YXYDg0w1HWsppWI5fVJl9flYV7j1nRWUMx0xRiuu9hl-45PtkJfmp3TRmRPxQXmfNuaBzks2nbW8OuGuOQD-avFO5bJ5_HupkYSg3T52EruGvSTw3V4ZfDEmneLA9Qa-pEzSbm0-EjYOPCcIUdlry7RUymIEVo_uuad6LtbbXBkGAksJKTJpJ8_ZKcfeGI_xs68RHjwtarG_dM9N48mDWSvo1sJc6qHpZXdjvPgnD5mlR7FaYhXreh_WDTyJ8D-N1PGNDQcVh4adh70Hc5D76IxmKF7_MQXp9dTFdrOGHQp1Mb7rcUlJA7k2BJrouHNTErxDwbnbjrlfdgKHv9ltTmo7rkT9AVhvWWMNLI8SovN0Gxp6k7hNcuIewcoQqDhuVv_O7Yk0ZSWELuhJRl_CciHr_G2eqfZ2ewLJRi5ADZ63HHTNtgyu5h_kH887FWZb0ayZO2x9WJ-IjITxPiwmYW7q9P6plSmRNkESahVZ-e3PHQ8ONyF-sH2HZGW-pfISRYsdLqwcCTA34yagnnCnGWALT0FkYMSYhc&x-client-SKU=ID_NETSTANDARD2_0&x-client-ver=5.5.0.0">OMEP Cloud</a></strong><br>
                     </li>
                 </ul>
                 <div class="service">
                 </div>
             </div>
 
-            <div class="skills">
-                <h5>Skills</h5>
-                <ul class="skills-list">
+            <div class="clients">
+                <h5>Clients</h5>
+                <ul class="clients-list">
+                    <!-- todo: get permission and add logos above the text -->
                     <li>
-                        <strong>GNU/Linux</strong><br>
-                        <p>Familiar with GNU/Linux and Unix type operating systems, package managers, and commands.</p>
+                        <p>Web development</p>
+                        <strong><a href="https://alpenglowagency.com/">Alpenglow Agency</a></strong><br>
                     </li>
                     <li>
-                        <strong>Computer security</strong><br>
-                        <p>Experienced with penetration testing and network hardening</p>
+                        <p>Web development and security work</p>
+                        <strong><a href="https://www.volitantconsulting.com/">Volitant Cosulting</a></strong><br>
                     </li>
                     <li>
-                        <strong>Software development</strong><br>
-                        <p>Proficient with Python, Dart, Javascript, C, and Java.</p>
+                        <p>Web development</p>
+                        <strong><a href="https://www.omep.org/">OMEP</a></strong><br>
                     </li>
                     <li>
-                        <strong>Flutter</strong><br>
-                        <p>Familiar and comfortable with Flutter, a native cross platform app development framework</p>
-                    </li>
-                    <li>
-                        <strong>Web maintenance</strong><br>
-                        <p>Comfortable with DNS, hosting providers, HTTPS, and most other topics related to website
-                            upkeep.</p>
+                        <p>Research & leads generation</p>
+                        <strong>Logical Cropping</strong><br>
                     </li>
                 </ul>
-                <div class="service">
-                </div>
             </div>
 
         </div>
