--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -70,39 +70,12 @@
 
             <div class="container form-top">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 col-sm-12 col-xs-12">
-                        <div class="panel panel-danger">
-                            <div class="panel-body">
-                                <form id="reused_form">
-                                    <div class="form-group">
-                                        <label><i class="fa fa-user" aria-hidden="true"></i> Name</label>
-                                        <input type="text" name="name" class="form-control" placeholder="Enter Name">
-                                    </div>
-                                    <div class="form-group">
-                                        <label><i class="fa fa-envelope" aria-hidden="true"></i> Email</label>
-                                        <input type="email" name="email" class="form-control" placeholder="Enter Email">
-                                    </div>
-                                    <div class="form-group">
-                                        <label><i class="fa fa-comment" aria-hidden="true"></i> Message</label>
-                                        <textarea rows="3" name="message" class="form-control"
-                                            placeholder="Type Your Message"></textarea>
-                                    </div>
-
-
-                                    <div class="form-group">
-                                        <button class="btn btn-raised btn-block btn-danger">Post →</button>
-                                    </div>
-                                </form>
-                                <div id="error_message" style="width:100%; height:100%; display:none; ">
-                                    <h4>Error</h4>
-                                    Sorry there was an error sending your form.
-                                </div>
-                                <div id="success_message" style="width:100%; height:100%; display:none; ">
-                                    <h2>Success! Your Message was Sent Successfully.</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <form id="contact-form" method="post" action="contact-form-handler.php">
+                        <input name="email" type="email" class="form-control" placeholder="Your Email" required><br>
+                        <textarea name="message" class="form-control" placeholder="Message" row="4" requires></textarea><br>
+                        <input type="submit" class="form-control submit" value="SEND MESSAGE">
+                    </form>
+                        
                 </div>
             </div>
         </div>
