Another commit to test the error remotely

--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -71,7 +71,8 @@
             <div class="container form-top">
                 <div class="row">
                     <form id="contact-form" method="post" action="contact-form-handler.php">
-                        <input name="email" type="email" class="form-control" placeholder="Your Email" required><br>
+                        <input name="name" type="text" class="form-control" placeholder="Your Name" required><br>
+                        <input name="email" type="email" class="form-control" placeholder="Your Name" required><br>
                         <textarea name="message" class="form-control" placeholder="Message" row="4" requires></textarea><br>
                         <input type="submit" class="form-control submit" value="SEND MESSAGE">
                     </form>
